# progress-tracker

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  com.moura.Progress.json  io.github.progresstracker.Progress.json  io.github.smolblackcat.Progress.Devel.json  io.github.smolblackcat.Progress.json
.github/: FUNDING.yml
.github/workflows/: flatpak.yml  progress-ci.yml
build-aux/: fetch-win-deps.py  fetch-win32-deps.sh  progress-installer-w32.iss  progress-installer-w64.iss  setup-gtk-environment.py  setup-gtk-environment.sh
data/: CMakeLists.txt  Progress.desktop  com.moura.Progress.desktop  com.moura.Progress.metainfo.xml  io.github.progresstracker.Progress.desktop  io.github.progresstracker.Progress.metainfo.xml  io.github.smolblackcat.Progress.desktop  io.github.smolblackcat.Progress.desktop.in  io.github.smolblackcat.Progress.desktop.in.in  io.github.smolblackcat.Progress.gschema.xml  io.github.smolblackcat.Progress.metainfo.xml  io.github.smolblackcat.Progress.metainfo.xml.in  io.github.smolblackcat.Progress.metainfo.xml.in.in
po/: CMakeLists.txt  LINGUAS  POTFILES  bg.mo  bg.po  en_GB.po  en_US.po  es.po  it.po  nl.po  pl.po  progress-tracker.pot  pt_BR.po  ru_RU.po  tr.po  uk_UA.po
progress-tracker/: CMakeLists.txt  app_window.cpp  app_window.h  main.cpp
progress-tracker/core/: CMakeLists.txt  board.cpp  board.h  card.cpp  card.h  cardlist.cpp  cardlist.h  item.cpp  item.h  tests.cpp
progress-tracker/ui/: CMakeLists.txt  create_board_dialog.cpp  create_board_dialog.h  dialog_tests.cpp  resources.cpp  resources.xml  window.cpp  window.h
src/: CMakeLists.txt  app-context.cpp  app-context.h  app_info.h.in  application.cpp  application.h  main.cpp  resources.xml  utils.cpp  utils.h  window.cpp  window.h
src/core/: CMakeLists.txt  board-manager.cpp  board-manager.h  board.cpp  board.h  card.cpp  card.h  cardlist.cpp  cardlist.h  colorable.cpp  colorable.h  exceptions.cpp  exceptions.h  item-container.cpp  item-container.h  item.cpp  item.h  modifiable.cpp  modifiable.h  task.cpp  task.h
src/dialog/: CMakeLists.txt  board-dialog.cpp  board-dialog.h  card-dialog.cpp  card-dialog.h  create_board_dialog.cpp  create_board_dialog.h  preferences-board-dialog.cpp  preferences-board-dialog.h
src/resources/ui/: app-window.ui  board-dialog.ui  card-details-dialog.ui  card-widget.ui  checklist-item-widget.ui  create-board-dialog.ui  style-dark.css  style.css  stylesheet.css
src/ui/: CMakeLists.txt  app-window.ui  application.cpp  application.h  board-card-button.cpp  board-card-button.h  board-dialog.cpp  board-dialog.h  board-widget.cpp  board-widget.h  card.cpp  card.h  cardlist-widget.cpp  cardlist-widget.h  cardlist.cpp  cardlist.h  create-board-dialog.ui  create_board_dialog.cpp  create_board_dialog.h  editable-label-header.cpp  editable-label-header.h  i18n.h  preferences-board-dialog.cpp  preferences-board-dialog.h  resources.xml  stylesheet.css  window-controller.cpp  window-controller.h  window.cpp  window.h
src/widgets/: CMakeLists.txt  base-item.cpp  base-item.h  board-card-button.cpp  board-card-button.h  board-widget.cpp  board-widget.h  card-widget.cpp  card-widget.h  card.cpp  card.h  cardlist-widget.cpp  cardlist-widget.h  editable-label-header.cpp  editable-label-header.h  task-widget.cpp  task-widget.h
test/: CMakeLists.txt  board-card-button.cpp  board-manager-test.cpp  board-test.cpp  board_progress.xml  card-test.cpp  cardlist-test.cpp  colorable-test.cpp  container-test.cpp  core.cpp  dnd.cpp  expected_to_fail.xml  heavy-board.cpp  modification-test.cpp  stress-test.cpp
